Add link between html and js part of the ap.

--- a/table.html
+++ b/table.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Table</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+  <script type="text/javascript" src="js/jQuery-3.2.1.js"></script>
+  <script type="text/javascript" src="js/myscript.js"></script>
   <style>
     td, th {
       width: 5rem;
@@ -52,3 +53,4 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="js/myscript.js"></script>
 </body>
+</html>
